--- a/WhoIsMyGDaddy.Tests.csproj
+++ b/WhoIsMyGDaddy.Tests.csproj
@@ -11,10 +11,17 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WhoIsMyGDaddy.API\WhoIsMyGDaddy.API.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.test.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
